--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,11 +8,9 @@
 
 html {
     font-size: 10px;
-
 }
 /* Clases del header  */
-.navbar {
-    background-color: #ee5757;
+.barra-navegacion {
     width: 100%;
     height: 70px;
     background-image: url("../Images/estrellas02.jpg");
@@ -20,29 +18,16 @@ html {
     background-position:center;
     background-repeat:repeat;
     background-size: 50%;
-
-    
 }
-.container-fluid img {
+
+.barra-navegacion-contenido img {
     width: 50px;
     height: 50px;
     object-fit: cover;
     border-radius: 50%;
 }
-.offcanvas-header {
-    background-image: url("../Images/estrellas02.jpg");
-    object-fit: cover;
-}
-.offcanvas-header h5 {
-    font-size: 1.5rem;
-}
-.offcanvas-header img {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-}
 
-.container-fluid a {
+.barra-navegacion-contenido a {
     color: #dfe0e2 ;
     font-family: 'Ubuntu';
     text-align: center;
@@ -51,31 +36,50 @@ html {
     padding: 5px;   
 }
 
+.cabecera-lateral {
+    background-image: url("../Images/estrellas02.jpg");
+    object-fit: cover;
+    background-position:center;
+    background-repeat:repeat;
+    background-size: 50%;
+}
+
+.cabecera-lateral h1 {
+    font-size: 1.5rem;
+    color: #dfe0e2;
+}
+
+.cabecera-lateral img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+
 /* Clases del main */
 .cuerpo {
     background-color: #dfe0e2;
-
 }
+
 .seccion-primera {
     background-color: #b7999c;
-    margin: 20px;
+    margin: 10px;
     border: 3px solid violet;
     border-radius: 4%;
     display: grid;
+    justify-content: space-evenly;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
-    padding: 20px;
+    padding: 10px;
     grid-template-areas: 
     'area1 area1 area2'
     'area4 area6 area8'
     'area5 area7 area9' 
     ;
-
 }
 
 .seccion-primera-info {
-    width: 100%;
+    width: 95%;
     height: 100%;
     background-color:#EB5160;
     display: flex;
@@ -86,7 +90,6 @@ html {
     border-radius: 10%;
     margin: 10px;
     padding: 10px;
-
 }
 
 .seccion-primera-info img {
@@ -95,6 +98,7 @@ html {
     object-fit: cover;
     border-radius: 10%;
 }
+
 .seccion-primera-info h2 {
     font-family: 'Ubuntu';
     width: 90%;
@@ -117,67 +121,68 @@ html {
 }
 
 .seccion-primera-info a {
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    font-size: 2.4rem;
     align-items: center;
-    text-align: center;
-    padding: 3px;
-    margin: 3px;
-
+    padding: 10px;
+    margin: 10px;
 } 
-.h1 {
+.info-1 {
     grid-area: area1;
     background-color: #b7999c;
     border: none;
 }
 
-.h2 {
+.info-2 {
     grid-area: area2;
 }
 
-.h2 img {
+.info-2 img {
     align-items: center;
 }
-.h3 {
+.info-3 {
     grid-area: area3;
 }
 
-.h4 {
+.info-4 {
     grid-area: area4;
     background-color: #b7999c;
     border-radius: 10%;
     
 }
 
-.h5 {
+.info-5 {
     grid-area: area5;
     
 }
 
-.h5 p {
+.info-5 p {
     text-align: center;
 }
-.h6 {
+.info-6 {
     grid-area: area6;
     background-color: #b7999c;
     border-radius: 10%;
 }
 
-.h7 {
+.info-7 {
     grid-area: area7;
 }
-.h7 p {
+.info-7 p {
     text-align: center;
 }
-.h8 {
+.info-8 {
     grid-area: area8;
     background-color: #b7999c;
     border-radius: 10%;
 }
 
-.h9 {
+.info-9 {
     grid-area: area9;
 }
-.h9 p {
+.info-9 p {
     text-align: center;
 }
 
@@ -205,6 +210,7 @@ html {
     border: 3px solid #EB5160;
     border-radius: 10%;
 }
+
 .seccion-segunda-info h2 {
     padding: 10px;
     color: #dfe0e2;
@@ -223,6 +229,7 @@ html {
     text-align: justify;
     padding: 10px;
 }
+
 .seccion-segunda-info ol li {
     color: #071013;
     font-family: 'Roboto';
@@ -231,6 +238,17 @@ html {
     height: 100%;
     text-align: justify;
 }
+
+.seccion-segunda-info a {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 2.4rem;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+}
+
 .seccion-segunda img {
     width: 90%;
     height: 300px;
@@ -240,12 +258,12 @@ html {
 
 /* Body pagina responsive tarot */
 
-.container {
+.contenedor {
     background-color: #EB5160;
     border-radius: 4%;
 }
 
-.row img {
+.tarot-segunda img {
     border-radius: 10%;
     padding: 10px;
 }
@@ -264,56 +282,94 @@ html {
     font-size: 2rem;
 }
 
-.accordion-header button {
+.cabecera-acordeon button {
     padding: 10px;
     color: #071013;
     font-family: 'Roboto';
-    font-size: 2rem;
+    font-size: 2.4rem;
 }
 
-.accordion-body p {
+.cuerpo-acordeon p {
     padding: 10px;
     color: #071013;
     font-family: 'Roboto';
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
+.tarot-primera a {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 2.4rem;
+    align-items: center;
+    padding: 20px;
+    margin: 10px;
+}
 /* Clases contacto */
 
 .seccion-primera-contacto {
     display: inline-block;
     width: 350px;
-    margin: 0px 40px;
+    margin: 10px;
     padding: 10px;
-    text-align: bottom;
+    text-align: center;
 }
+
+.seccion-primera-contacto p {
+    color: #071013;
+    font-family: 'Roboto';
+    font-size: 1.6rem;
+    width: 270px;
+    margin: 5px;
+    padding: 5px;
+    text-align: justify;
+}
+
 .seccion-primera-contacto label {
     font-size: 1.6rem;
-    text-align: bottom;
+    text-align: justify;
+    color: #071013;
+    font-family: 'Roboto';
+    margin: 0.5rem;
 }
+
 .titulo-contacto {
     font-family: 'Ubuntu';
     font-size: 2.4rem;
     text-align: center;
     color: #071013;
 }
-/* .form-input */
-.ingresar-texto {
+
+.ingresar-texto label {
     text-align: left;
 }
-.boton-enviar {
-    text-align: right;
-}
 
-@media (max-width:810px) {
-    .seccion-segunda-info {
-        flex-flow: row wrap;
-    }
+.boton-enviar {
+    margin-left: 17.5rem;
 }
 
 /* Mediaquery para vista del index en tableta */
 @media (min-width:768px) and (max-width:1023px) {
+    .barra-navegacion {
+        height: 60px;
+    }
+
+    .barra-navegacion-contenido img {
+        width: 40px;
+        height: 40px;
+    }
     
+    .barra-navegacion-contenido a {
+        font-size: 1.8rem;
+    }
+    
+    .seccion-primera-info h2 {
+        font-size: 3.0rem;
+    }
+    
+    .seccion-primera-info p {
+        font-size: 2.0rem;
+    }
     .seccion-primera {
         background-color: salmon;
         border-radius: 3%;
@@ -328,18 +384,37 @@ html {
         ;
     }
     
-    .h8 , .h6 , .h4 , .h1 {
+    .info-1 , .info-4 , .info-6 , .info-8 {
         background-color: salmon;
     } 
-    .h9 , .h8 , .h7 , .h6 , .h5 , .h4 , .h2 {
+    .info-2 , .info-4 , .info-5 , .info-6 , .info-7 , .info-8 , .info-9 {
         border: 3px solid violet;
     } 
-    .container-fluid a {
-        font-size: 1.8rem;
-    }
+
 }
 /* Mediaquery para vista del index en mobile */
 @media (max-width:768px) {
+    .barra-navegacion {
+        height: 50px;
+    }
+
+    .barra-navegacion-contenido img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .barra-navegacion-contenido a {
+        font-size: 1.3rem;
+    }
+
+    .seccion-primera-info h2 {
+        font-size: 2.4rem;
+    }
+    
+    .seccion-primera-info p {
+        font-size: 1.8rem;
+    }
+
     .seccion-primera {
         background-color: #EB5160;
         border-radius: 0%;
@@ -358,17 +433,20 @@ html {
         ;
     }
     
-    .h8 , .h6 , .h4 , .h1 {
+    .info-1 , .info-4 , .info-6 , .info-8 {
         background-color: #EB5160;
     } 
-    .h9 , .h8 , .h7 , .h6 , .h5 , .h4 , .h2 {
+    .info-2 , .info-4 , .info-5 , .info-6 , .info-7 , .info-8 , .info-9 {
         border: 3px solid #b7999c;
     } 
-    .container-fluid a {
-        font-size: 1.3rem;
+
+}
+/* Mediaqueries para responsive reiki y meditación */
+@media (max-width:810px) {
+    .seccion-segunda-info {
+        flex-flow: row wrap;
     }
 }
-
 
 /* Clases del footer */
 .pie-fondo {
